HelloUltraviolet/Fixtures/RejectedSource/Expressions/IndexClassification/Expected.uv
//! Expected diagnostic metadata for the IndexClassification rejected-source specimen.

expectedDiagnostic("E-UNS-0102", "def.16.IndexClassification")
